// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton Renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#2A2A2A",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingVertical": 16,
        "width": "100%",
      },
      false,
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Poppins-Regular",
        "fontSize": 16,
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`LoadingButton Renders correctly when loading 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#2A2A2A",
        "borderRadius": 4,
        "justifyContent": "center",
        "paddingVertical": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#444444",
      },
      false,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
    testID="activity-indicator"
  />
</View>
`;
